@@ -4902,3 +4902,9 @@ v0.92.0.11:
 0.96.2.17: 
   - Re-activate the world files unclaimedZoneIgnoredIDs list.
     - This was only being used for wilds plots, and not having any effect on the wilderness.
+  - New Permission Nodes:
+    - towny.admin.spawn.nocharge - makes spawning cost 0.
+    - towny.admin.spawn.nocooldown - removes cooldown from spawning.
+    - towny.admin.spawn.nowarmup - removes warmup from spawning.
+    - All three are child nodes of towny.admin.spawn
+    - Closes #4296.
